<resources>
    <string name="app_name">DSM - Desafío 1</string>
    <string name="btn1Text">Ejercicio 1</string>
    <string name="btn2Text">Ejercicio 2</string>
    <string name="btn3Text">Ejercicio 3</string>
    <string name="e1Title">Promedio de estudiante</string>
    <string name="e1Desc1">Ingresa 5 notas diferentes.</string>
    <string name="e1Desc2">Rango permitido: 0.00 – 10.00</string>
    <string name="e1Name">Nombre</string>
    <string name="e1G1">Nota 1</string>
    <string name="e1G2">Nota 2</string>
    <string name="e1G3">Nota 3</string>
    <string name="e1G4">Nota 4</string>
    <string name="e1G5">Nota 5</string>
    <string name="e1Calc">Calcular</string>
    <string name="emptyError">Debe llenar todos los campos</string>
    <string name="typeError">Las notas deben ser valores numéricos no vacíos.</string>
    <string name="rangeError">Las notas deben estar entre 0 y 10.</string>
    <string name="sameValueError">Los valores de las notas no pueden repetirse.</string>
    <string name="average">Promedio: %1$.2f</string>
    <string name="avgPassed">%1$s aprobó</string>
    <string name="avgFailed">%1$s reprobó</string>
    <string name="resultNotificationId">Resultado del promedio</string>
    <string name="resultNotificationTitle">Resultado</string>
    <string name="channelName">Canal por defecto</string>
    <string name="notificationsDenied">Se denegaron las notificaciones.</string>
    <string name="notificationRationale">Por favor activa las notificaciones para ser advertido de los resultados.</string>
    <string name="ok">OK</string>
</resources>