<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menuPrimary"
        android:padding="@dimen/titlePadding"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/btnSpacingHorizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnEjercicio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1Text"
            android:textSize="@dimen/normalTextSize"
            android:backgroundTint="@color/coralAccent"
            android:layout_marginVertical="@dimen/btnMarginVertical" />

        <Button
            android:id="@+id/btnEjercicio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2Text"
            android:textSize="@dimen/normalTextSize"
            android:textColor="@color/black"
            android:backgroundTint="@color/limeAccent"
            android:layout_marginVertical="@dimen/btnMarginVertical" />

        <Button
            android:id="@+id/btnEjercicio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3Text"
            android:textSize="@dimen/normalTextSize"
            android:backgroundTint="@color/indigoAccent"
            android:layout_marginVertical="@dimen/btnMarginVertical" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>